--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "simple-icons": "^16.9.0",
     "three": "^0.170.0"
   },
   "devDependencies": {
